<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootView"
    style="@style/general_base_rl_style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/rlHeadView"
        style="@style/title_style">

        <TextView
            style="@style/title_text_style"
            android:text="@string/main_aty_card"/>
    </RelativeLayout>


    <com.gc.materialdesign.views.ScrollView
        style="@style/general_scorll_view_style"
        android:layout_below="@id/rlHeadView">

        <LinearLayout style="@style/general_base_vertical_ll_style">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etName"
                style="@style/def_edit_style"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:maxLength="6"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="6"
                app:met_primaryColor="@color/material"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etCompany"
                style="@style/def_edit_style"
                android:hint="@string/company_hint"
                android:inputType="textPostalAddress"
                android:maxLength="24"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="24"
                app:met_primaryColor="@color/material"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etJob"
                style="@style/def_edit_style"
                android:hint="@string/job_hint"
                android:inputType="textLongMessage"
                android:maxLength="15"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/material"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPhone"
                style="@style/def_edit_style"
                android:autoLink="phone"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="11"
                app:met_primaryColor="@color/material"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etQq"
                style="@style/def_edit_style"
                android:hint="@string/qq_hint"
                android:inputType="textLongMessage"
                android:maxLength="20"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/material"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etEmail"
                style="@style/def_edit_style"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="25"
                app:met_primaryColor="@color/material"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPerson"
                style="@style/def_edit_style"
                android:hint="@string/say_hint"
                android:inputType="textMultiLine"
                android:maxLength="80"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="80"
                app:met_primaryColor="@color/material"/>


        </LinearLayout>
    </com.gc.materialdesign.views.ScrollView>

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/btnCreate"
        style="@style/float_button_style"
        app:animate="true"
        app:iconDrawable="@mipmap/ic_create"/>
</RelativeLayout>
