<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootView"
    style="@style/general_base_rl_style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/rlHeadView"
        style="@style/general_title_rl_style">

        <TextView
            style="@style/general_title_tv_style"
            android:text="@string/main_aty_url"/>
    </RelativeLayout>


    <ScrollView
        style="@style/general_scorll_view_style"
        android:layout_below="@id/rlHeadView">

        <LinearLayout style="@style/general_base_vertical_ll_style">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etWebTitle"
                style="@style/def_edit_style"
                android:hint="@string/url_hint"
                android:inputType="textLongMessage"
                android:maxLength="50"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="50"
                app:met_primaryColor="@color/material"
                app:met_singleLineEllipsis="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etWebUrl"
                style="@style/def_edit_style"
                android:hint="@string/url_text_hint"
                android:inputType="textMultiLine"
                android:maxLength="150"
                app:met_baseColor="@color/black"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="150"
                app:met_primaryColor="@color/material"/>

        </LinearLayout>
    </ScrollView>


    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/btnCreate"
        style="@style/float_button_style"
        app:animate="true"
        app:iconDrawable="@mipmap/ic_create"/>

</RelativeLayout>
